<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
		<Preference
			android:title="@string/userinfo_update"
			android:key="userinfo_update"
			android:widgetLayout="@layout/preference_more" />

		<PreferenceCategory android:title="@string/userinfo_userinfo"
			android:key="userinfo_userinfo" >
			
			<Preference
				android:title="@string/userinfo_username"
				android:key="userinfo_username"
				android:widgetLayout="@layout/preference_more" />
 
		 	<Preference
				android:title="@string/userinfo_password"
				android:summary="******"
				android:key="userinfo_password"
				android:widgetLayout="@layout/preference_more" />

		 	<Preference
				android:title="@string/userinfo_email"
				android:key="userinfo_email"
				android:widgetLayout="@layout/preference_more" />
	  
			<Preference
				android:title="@string/userinfo_verifyemail"
				android:key="userinfo_verifyemail"
				android:widgetLayout="@layout/preference_more" />
			
			<Preference
				android:title="@string/userinfo_binding_baidu"
				android:key="userinfo_binding_baidu"
				android:widgetLayout="@layout/preference_more" />
			
			<Preference
				android:title="@string/userinfo_binding"
				android:key="userinfo_binding"
				android:widgetLayout="@layout/preference_more" />

			<!--		
			<Preference
				android:title="@string/userinfo_logout"
				android:key="userinfo_logout"
				android:widgetLayout="@layout/preference_more" />			   
			<com.thinkernote.ThinkerNote.General.TNDialogPreference
				android:key="funThing" 
				android:title="Fun Thing"
				android:dialogLayout="@layout/login"
				android:positiveButtonText="OK"
				android:negativeButtonText="Cancel"
				/> --> 
			
		</PreferenceCategory>

		<PreferenceCategory android:title="@string/userinfo_settings"
			android:key="userinfo_settings">
			
			<Preference
				android:title="@string/userinfo_defaultfolder"
				android:key="userinfo_defaultfolder"
				android:widgetLayout="@layout/preference_more" />
				
			<Preference
				android:title="@string/userinfo_sync"
				android:key="userinfo_sync" 
				android:widgetLayout="@layout/preference_more" />

			<Preference
				android:title="@string/userinfo_lockpattern"
				android:key="userinfo_lockpattern" 
				android:widgetLayout="@layout/preference_more" />
			
			<Preference
				android:title="@string/userinfo_remindlockgroup_close"
				android:key="userinfo_remindLockGroup" 
				android:widgetLayout="@layout/preference_more" />
			
			<Preference
				android:title="@string/userinfo_remindlocknote_close"
				android:key="userinfo_remindLockNote" 
				android:widgetLayout="@layout/preference_more" />
			
			<Preference
				android:title="@string/userinfo_changeskin"
				android:key="userinfo_changeskin" 
				android:widgetLayout="@layout/preference_more" />
			
			<Preference
				android:title="@string/userinfo_picture_compressionmode"
				android:key="userinfo_picture_compressionmode" 
				android:widgetLayout="@layout/preference_more" />
	
		</PreferenceCategory>
		
		<PreferenceCategory android:title="@string/userinfo_audio_settings"
			android:key="userinfo_audio_settings">
			
			<Preference
				android:title="@string/userinfo_voice"
				android:key="userinfo_voice"
				android:widgetLayout="@layout/preference_more" />

			<com.thinkernote.ThinkerNote.Other.SeekBarPreference  
				android:title="@string/userinfo_speed"
				android:key="userinfo_speed" 
				android:widgetLayout="@layout/preference_more"
			 	android:dialogTitle="@string/alert_Title" 
			 	android:dialogLayout="@layout/seekbar_dialog">  
			</com.thinkernote.ThinkerNote.Other.SeekBarPreference>  

<!-- 				
			<Preference
				android:title="@string/userinfo_speed"
				android:key="userinfo_speed" 
				android:widgetLayout="@layout/preference_more" />

			<Preference
				android:title="@string/userinfo_volume"
				android:key="userinfo_volume" 
				android:widgetLayout="@layout/preference_more" />
 -->
			<com.thinkernote.ThinkerNote.Other.SeekBarPreference  
				android:title="@string/userinfo_volume"
				android:key="userinfo_volume" 
				android:widgetLayout="@layout/preference_more"
			 	android:dialogTitle="@string/alert_Title" 
			 	android:dialogLayout="@layout/seekbar_dialog">  
			</com.thinkernote.ThinkerNote.Other.SeekBarPreference>  
	
		</PreferenceCategory>		

		<PreferenceCategory android:title="@string/userinfo_space"
			android:key="userinfo_space">
	
		 	<Preference
				android:title="@string/userinfo_phone_available"
				android:key="userinfo_phone_available" />
		
		 	<Preference
				android:title="@string/userinfo_sdcard_available"
				android:key="userinfo_sdcard_available" />
				
		 	<Preference
				android:title="@string/userinfo_clear_cache"
				android:key="userinfo_clear_cache"
				android:widgetLayout="@layout/preference_more" />			
		</PreferenceCategory>
				
		<PreferenceCategory android:title="@string/userinfo_spaceinfo"
			android:key="userinfo_spaceinfo">
			
			<Preference
				android:title="@string/userinfo_usedspace"
				android:key="userinfo_usedspace" />
				
			<Preference
				android:title="@string/userinfo_contribution"
				android:key="userinfo_contribution"
				android:widgetLayout="@layout/preference_more" />

			<Preference
				android:title="@string/userinfo_con_rank"
				android:key="userinfo_con_rank" />
	
			<Preference
				android:title="@string/userinfo_invite_code"
				android:key="userinfo_invite_code" />

			<Preference
				android:title="@string/userinfo_invite"
				android:key="userinfo_invite" 
				android:widgetLayout="@layout/preference_more" />
		</PreferenceCategory>		
		
</PreferenceScreen>
