<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android">

  	<item android:title="@string/notelistitem_menu_view" 
		android:id="@+id/notelistitem_menu_view">
	</item>
	
  	<item android:title="@string/notelistitem_menu_edit"
  	    android:id="@+id/notelistitem_menu_edit"/>

  	<item android:title="@string/notelistitem_menu_sync" 
		android:id="@+id/notelistitem_menu_sync">
	</item>
	
	<item android:title="@string/notelistitem_menu_delete" 
		android:id="@+id/notelistitem_menu_delete">
	</item>
	
	<item android:title="@string/notelistitem_menu_moveto"
	    android:id="@+id/notelistitem_menu_moveto"/>
	
	<item android:title="@string/notelistitem_menu_changetag"
	    android:id="@+id/notelistitem_menu_changetag"/>
	
	<item android:title="@string/notelistitem_menu_info" 
		android:id="@+id/notelistitem_menu_info">
	</item>
	
	<item android:title="@string/notelistitem_menu_cancel" 
		android:id="@+id/notelistitem_menu_cancel">
	</item>
	
</menu>
