<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
  
	<PreferenceCategory android:title="@string/catinfo_folder"
		android:key="catinfo_folder">
	   	<Preference
			android:title="@string/catinfo_name"
			android:key="catinfo_name" 
			android:widgetLayout="@layout/preference_more" />

		<Preference
			android:title="@string/catinfo_group"
			android:key="catinfo_group" 
			android:widgetLayout="@layout/preference_more" />
			
		<Preference
			android:title="@string/catinfo_notecount"
			android:key="catinfo_notecount"  />

		<Preference
			android:title="@string/catinfo_isdefault"
			android:key="catinfo_isdefault"  />

		<Preference
			android:title="@string/catinfo_delete"
			android:key="catinfo_delete" 
			android:widgetLayout="@layout/preference_more" />
			
		<Preference
			android:title="@string/catinfo_setdefault"
			android:key="catinfo_setdefault" 
			android:widgetLayout="@layout/preference_more" />

	</PreferenceCategory>
</PreferenceScreen>
