<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >
    
    <TextView 
        android:id="@+id/notelistitem_menu_view"
        android:text="@string/notelistitem_menu_view"
        style="@style/menu_item"/>
    
    <View 
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/divider"/>
    
    <TextView 
        android:id="@+id/notelistitem_menu_edit"
        android:text="@string/notelistitem_menu_edit"
        style="@style/menu_item"/>
    
    <View 
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/divider"/>
    
    <TextView 
        android:id="@+id/notelistitem_menu_sync"
        android:text="@string/notelistitem_menu_sync"
        style="@style/menu_item"/>
    
    <View 
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/divider"/>
	
	<TextView 
        android:id="@+id/notelistitem_menu_delete"
        android:text="@string/notelistitem_menu_delete"
        style="@style/menu_item"/>
    
    <View 
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/divider"/>
    
    <TextView 
        android:id="@+id/notelistitem_menu_moveto"
        android:text="@string/notelistitem_menu_moveto"
        style="@style/menu_item"/>
    
    <View 
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/divider"/>
	
	<TextView 
        android:id="@+id/notelistitem_menu_changetag"
        android:text="@string/notelistitem_menu_changetag"
        style="@style/menu_item"/>
    
    <View 
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/divider"/>
    
    <TextView 
        android:id="@+id/notelistitem_menu_info"
        android:text="@string/notelistitem_menu_info"
        style="@style/menu_item"/>
    
    <View 
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/divider"/>
    
    <TextView 
        android:id="@+id/notelistitem_menu_cancel"
        android:text="@string/notelistitem_menu_cancel"
        style="@style/menu_item"/>
    
</LinearLayout>
