<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical">
  
	<TextView 
	    android:text="@string/userinfo_pwd_modify" 
		android:textSize="14sp"
		android:textColor="#666666"
		android:layout_margin="4dp"
		android:layout_height="wrap_content" 
		android:layout_width="match_parent">
	</TextView>
	
	<EditText android:id="@+id/userinfo_pwd_old" 
		android:layout_height="wrap_content" 
		android:layout_width="match_parent" 
		android:singleLine="true"
		android:password="true"
		android:background="@null"
		android:padding="10dp"
		android:hint="@string/userinfo_pwd_old">
	</EditText>
	
	<View 
	    android:layout_width="match_parent"
	    android:layout_height="0.5dp"
	    android:background="#dddddd"/>
	
	<EditText android:id="@+id/userinfo_pwd_new" 
		android:layout_height="wrap_content" 
		android:layout_width="fill_parent" 
		android:singleLine="true"
		android:password="true"
		android:background="@null"
		android:padding="10dp"
		android:hint="@string/userinfo_pwd_new">
	</EditText>
	
	<View 
	    android:layout_width="match_parent"
	    android:layout_height="0.5dp"
	    android:background="#dddddd"/>
	
	<EditText android:id="@+id/userinfo_pwd_confirm" 
		android:layout_height="wrap_content" 
		android:layout_width="fill_parent" 
		android:singleLine="true"
		android:password="true"
		android:background="@null"
		android:padding="10dp"
		android:hint="@string/userinfo_pwd_confirm">
	</EditText>

</LinearLayout>
